chore: TIN-82 update swagger
