# docs/swagger.json
@@ -1284,6 +1284,10 @@
                     "type": "string",
                     "example": "woman"
                 },
+                "profile_pic": {
+                    "type": "string",
+                    "example": "http://example/profile_pic"
+                },
                 "sex": {
                     "type": "string",
                     "example": "man"
@@ -1291,6 +1295,10 @@
                 "smokes": {
                     "type": "string",
                     "example": "no"
+                },
+                "user_id": {
+                    "type": "string",
+                    "example": "d2095501-4295-4cb2-b616-94cd2dc5bfb1"
                 }
             }
         },
